remove second body field in edit & new

--- a/app/views/plants/show.html.erb
+++ b/app/views/plants/show.html.erb
@@ -2,7 +2,7 @@
 <p><b>Nom scientifique</b> : <%= @plant.name %></p>
 <p><b>Famille</b> : <%= @plant.family %></p>
 <p><b>Légende</b> <%= @plant.legend %></p>
-<p><b>Body</b> <%= @plant.body %></p>
+<p><b>Body</b> : <%= @plant.body %></p>
 <p><b>Citation</b> <i><%= @plant.quote %></i></p>
 <p><b>Luminosité</b> : <%= @plant.luminosity_subtitle %></p>
 <p><%= @plant.luminosity_text %></p>
