--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,8 +1,9 @@
 <h1>Les quizzes</h1>
 
+<%= link_to 'Ajouter un quiz', new_quiz_path  %>
 <% @quizzes.each do |quiz| %>
-  <p><%= quiz.name %></p>
+  <p><%= quiz.name %>
   <%= link_to "Voir le quiz : #{quiz.name}", quiz_path(quiz) %>
   - <%= link_to "Modifier", edit_quiz_path(quiz) %>
-  - <%= link_to 'Supprimer', quiz_path(quiz), method: :delete, data: {confirm: "Es-tu sûre de vouloir supprimer #{quiz.name} ?"} %>
+  - <%= link_to 'Supprimer', quiz_path(quiz), method: :delete, data: {confirm: "Es-tu sûre de vouloir supprimer le quizz : '#{quiz.name}' ?".capitalize} %></p>
 <% end %>
