--- a/app/views/plants/index.html.erb
+++ b/app/views/plants/index.html.erb
@@ -1,12 +1,13 @@
 <h1>Les plantes</h1>
 
+<%= link_to 'Ajouter une plante', new_plant_path %>
 
 <% @plants.each do |plant| %>
   <h3><%= plant.nickname %></h3>
   <p><b>Luminosité</b> : <%= plant.luminosity_subtitle %></p>
   <p><b>Arrosage</b> : <%= plant.watering_subtitle %></p>
   <p><b>Animaux</b> : <%= plant.pet_subtitle %></p>
-  <%= link_to "Découvrir la plante ", plant_path(plant) %>
+  <%= link_to "Découvrir la plante", plant_path(plant) %>
   - <%= link_to "Modifier", edit_plant_path(plant) %>
   - <%= link_to "Supprimer", plant_path(plant), method: :delete, data: {confirm: "Es-tu sûre de vouloir supprimer la plante : '#{plant.nickname}' ?".capitalize} %>
 <% end %>
