try to solve category pb

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Les Catégories</h1>
 
-<%= link_to 'Ajouter une catégorie', new_category_path %>
+<%= link_to 'Ajouter une catégorie', new_quiz_category_path %>
 
 
 <% @categories.each do |category| %>
