--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @category do |f| %>
+<%= simple_form_for ([@quiz, @category]) do |f| %>
   <%= f.label :name, "Nom de la catégorie" %>
   <%= f.text_field :name %>
   <%= f.submit %>
