--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,2 +1,3 @@
 <p>Nom du quiz : <%= @quiz.name %></p>
+<%= link_to 'Ajouter une catégorie', new_quiz_category_path(@quiz) %>
 <%= link_to 'Retour', quizzes_path %>
