--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,11 +1,11 @@
 <h1>Les Catégories</h1>
 
-<%= link_to 'Ajouter une catégorie', new_quiz_category_path %>
-
-
-<% @categories.each do |category| %>
-  <p><%= category.name %>
-  <%= link_to "Voir la catégorie : #{category.name}", category_path(category) %>
+<%= link_to 'Ajouter une catégorie', new_quiz_category_path  %>
+<% @categories.order(created_at: :desc).each do |category| %>
+  <p><%= link_to "#{category.name}", category_path(category) %>
   - <%= link_to "Modifier", edit_category_path(category) %>
   - <%= link_to 'Supprimer', category_path(category), method: :delete, data: {confirm: "Es-tu sûre de vouloir supprimer la catégorie : '#{category.name}' ?".capitalize} %></p>
 <% end %>
+
+
+<%= link_to 'Retour', quizzes_path  %>
