--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Les Catégories</h1>
 
-<%= link_to 'Ajouter une catégorie', new_quiz_category_path  %>
+<p><%= link_to 'Ajouter une catégorie', new_category_path  %></p>
+
 <% @categories.order(created_at: :desc).each do |category| %>
   <p><%= link_to "#{category.name}", category_path(category) %>
   - <%= link_to "Modifier", edit_category_path(category) %>
