--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,3 @@
 <p>Nom de la catégorie : <%= @category.name %></p>
-<%#= link_to 'Retour', quiz_categories_path(quizzes) %>
+<p><%= link_to 'Retour', categories_path %></p>
+<p><%= link_to 'Retour aux quizzes', quizzes_path %></p>
