--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,10 +1,12 @@
 <h1>Les quizzes</h1>
 
-<%= link_to 'Ajouter un quiz', new_quiz_path  %>
-<%#= link_to 'Voir les catégories', quiz_categories_path(quizzes)  %>
+<p><%= link_to 'Ajouter un quiz', new_quiz_path  %>
+- <%= link_to 'Voir les catégories', categories_path  %></p>
 
-<% @quizzes.each do |quiz| %>
+<% @quizzes.order(created_at: :desc).each do |quiz| %>
   <p><%= link_to "#{quiz.name}", quiz_path(quiz) %>
   - <%= link_to "Modifier", edit_quiz_path(quiz) %>
   - <%= link_to 'Supprimer', quiz_path(quiz), method: :delete, data: {confirm: "Es-tu sûre de vouloir supprimer le quizz : '#{quiz.name}' ?".capitalize} %></p>
 <% end %>
+
+<%= link_to 'Retour aux plantes', plants_path  %>
