test nested attributesdoesn't work well

--- a/app/views/quizzes/edit.html.erb
+++ b/app/views/quizzes/edit.html.erb
@@ -1,5 +1,2 @@
-<%= form_for @quiz do |f| %>
-  <%= f.label :name, "Nom du quizz" %>
-  <%= f.text_field :name %>
-  <%= f.submit %>
-<% end %>
+<%= "Modifier #{@quiz.name}" %>
+<%= render "form" %>
