--- a/app/views/quizzes/new.html.erb
+++ b/app/views/quizzes/new.html.erb
@@ -1,5 +1,2 @@
-<%= form_for @quiz do |f| %>
-  <%= f.label :name, "Nom du quizz" %>
-  <%= f.text_field :name %>
-  <%= f.submit %>
-<% end %>
+<h1>Créer un nouveau quiz</h1>
+<%= render "form" %>
