--- a/app/views/quizzes/edit.html.erb
+++ b/app/views/quizzes/edit.html.erb
@@ -1,5 +1,8 @@
-<%= form_for @quiz do |f| %>
-  <%= f.label :name, "Nom du quizz" %>
-  <%= f.text_field :name %>
-  <%= f.submit %>
+<p>Modifier "<%= @quiz.name %>"</p>
+
+<%= form_with model: @quiz do |form| %>
+  <%= form.text_field :name, placeholder: "Nom du quiz" %>
+  <%= form.submit 'Modifier' %>
 <% end %>
+<br>
+<%= link_to 'Retour', quizzes_path %>
