--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,12 +1,23 @@
 <h1>Les quizzes</h1>
 
-<p><%= link_to 'Ajouter un quiz', new_quiz_path  %>
-- <%= link_to 'Voir les catégories', categories_path  %></p>
+<p><%= link_to 'Ajouter un quiz', new_quiz_path  %></p>
 
-<% @quizzes.order(created_at: :desc).each do |quiz| %>
-  <p><%= link_to "#{quiz.name}", quiz_path(quiz) %>
-  - <%= link_to "Modifier", edit_quiz_path(quiz) %>
-  - <%= link_to 'Supprimer', quiz_path(quiz), method: :delete, data: {confirm: "Es-tu sûre de vouloir supprimer le quizz : '#{quiz.name}' ?".capitalize} %></p>
+
+<% @quizzes.order(created_at: :asc).each do |quiz| %>
+  <%= quiz.name %>
+  <%= link_to 'See', quiz_path(quiz) %>
+  - <%= link_to 'Modifier', edit_quiz_path(quiz)  %>
+  - <%= link_to 'Supprimer', quiz_path(quiz), method: :delete, data: {confirm: "Es-tu sûre de vouloir supprimer le quizz : '#{quiz.name}' ?".capitalize} %>
+  <ul>
+    <% quiz.questions.each do |question| %>
+    <li>
+      <%= question.body %>
+      (<%= question.category.name %>)
+    </li>
+    <% end %>
+  </ul>
 <% end %>
 
 <%= link_to 'Retour aux plantes', plants_path  %>
+
+
