--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -1,12 +1,14 @@
-<p>Nom du quiz : <%= @quiz.name %></p>
-
-<%= link_to 'Ajouter une question',  new_quiz_question_path(@quiz) %>
-
-<% @quiz.questions.order(created_at: :desc).each do |question| %>
-  <p><%= question.body %>
-  - <%= link_to "Modifier", edit_question_path(question) %>
-  - <%= link_to 'Supprimer', question_path(question), method: :delete, data: {confirm: "Es-tu sûre de vouloir supprimer le quizz : '#{question.body}' ?".capitalize} %></p>
-<% end %>
+<p><%= @quiz.name %>
+  - <%= link_to 'Modifier', edit_quiz_path(@quiz) %>
+   - <%= link_to 'Supprimer', quiz_path(@quiz), method: :delete, data: {confirm: "Es-tu sûre de vouloir supprimer le quizz : '#{@quiz.name}' ?".capitalize} %>
+</p>
+<ul>
+  <% @quiz.questions.each do |question| %>
+    <li>
+      <%= question.body %>
+    </li>
+  <% end %>
+</ul>
 
 <%= link_to 'Retour', quizzes_path %>
 
