--- a/app/views/quizzes/edit.html.erb
+++ b/app/views/quizzes/edit.html.erb
@@ -1,8 +1,3 @@
 <p>Modifier "<%= @quiz.name %>"</p>
 
-<%= form_with model: @quiz do |form| %>
-  <%= form.text_field :name, placeholder: "Nom du quiz" %>
-  <%= form.submit 'Modifier' %>
-<% end %>
-<br>
-<%= link_to 'Retour', quizzes_path %>
+<%= render "form" %>
