--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @quiz do |quiz_form| %>
+<%= simple_form_for @quiz do |quiz_form| %>
   <% if @quiz.errors.any? %>
     <div>
       <h2><%= pluralize(@quiz.errors.count, 'error') %> prohibited this quiz from beign saved :</h2>
@@ -15,14 +15,14 @@
     <%= quiz_form.text_field :name, placeholder: "Nom du quiz" %>
   </div>
 
-  <p>Ajouter des questions</p>
+  <p>Les questions</p>
 
   <%= quiz_form.fields_for :questions do |question_form| %>
     <%= render "question_fields", f: question_form %>
-    <div>
-      <%= link_to_add_association 'add question', quiz_form, :questions, wrap_object: Proc.new { |question| question.build_category; question } %>
-    </div>
   <% end %>
+    <div>
+      <%= link_to_add_association 'Ajouter une question', quiz_form, :questions, wrap_object: Proc.new { |question| question.build_category; question } %>
+    </div>
 
 
   <br>
@@ -30,3 +30,4 @@
 <% end %>
 <br>
 <%= link_to 'Retour', quizzes_path %>
+
