--- a/app/views/quizzes/_question_fields.html.erb
+++ b/app/views/quizzes/_question_fields.html.erb
@@ -8,5 +8,6 @@
       <%= render 'category_fields', f: category %>
     <% end %>
 
-  <%= link_to_remove_association "remove the fucking question", f, {wrapper_class: '.adieu'} %>
+  <%= link_to_remove_association "remove the fucking question", f %>
+  <%#= link_to_remove_association "remove the fucking question", f, {wrapper_class: '.the_fucking_question'} %>
 </div>
