--- a/app/views/quizzes/_question_fields.html.erb
+++ b/app/views/quizzes/_question_fields.html.erb
@@ -1,4 +1,7 @@
-<div>
+<!-- La class="nested-fields" est ESSENTIELLE
+Sans elle, le  link_to_remove_association ne marche pas -->
+
+<div class="nested-fields">
   <div>
     <%= f.label "question" %>
     <%= f.text_field :body, placeholder: "Ajouter une question" %>
@@ -9,5 +12,4 @@
     <% end %>
 
   <%= link_to_remove_association "remove the fucking question", f %>
-  <%#= link_to_remove_association "remove the fucking question", f, {wrapper_class: '.the_fucking_question'} %>
 </div>
