--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -7,7 +7,7 @@
 <ul>
 
   <%= quiz.name %>
-  <%= link_to 'See', quiz_path(quiz) %>
+  <%= link_to 'Voir', quiz_path(quiz) %>
   - <%= link_to 'Modifier', edit_quiz_path(quiz)  %>
   - <%= link_to 'Supprimer', quiz_path(quiz), method: :delete, data: {confirm: "Es-tu sûre de vouloir supprimer le quizz : '#{quiz.name}' ?".capitalize} %>
 </ul>
