--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -13,6 +13,7 @@
 </ul>
 <% end %>
 
-<%= link_to 'Retour aux plantes', plants_path  %>
+<%= link_to 'Retour aux plantes', plants_path  %> <br>
+<%= link_to 'Retour', root_path %>
 
 
